[project]
name = "freqtrade0"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp>=3.9.5",
    "ast-comments==1.2.2",
    "bottleneck==1.4.2",
    "cachetools==5.5.2",
    "catboost==1.2.8 ; 'arm' not in platform_machine",
    "ccxt>=4.4.85",
    "coveralls==4.0.1",
    "cryptography==44.0.2",
    "datasieve==0.1.7",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "freqtrade==2025.4",
    "freqtrade-client>=2025.4",
    "ft-scikit-optimize==0.9.2",
    "gymnasium==0.29.1",
    "httpx>=0.24.1",
    "humanize==4.12.2",
    "isort==6.0.1",
    "janus==2.0.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "lightgbm==4.6.0",
    "mypy==1.15.0",
    "nbconvert==7.16.6",
    "numexpr==2.10.2",
    "numpy<2.0",
    "orjson==3.10.16",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandas-ta==0.3.14b0",
    "plotly==6.0.1",
    "pre-commit==4.2.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "py-find-1st==1.1.7",
    "pyarrow==20.0.0 ; platform_machine != 'armv7l'",
    "pycoingecko==3.2.0",
    "pydantic==2.11.3",
    "pyjwt==2.10.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "pytest-random-order==1.1.1",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "python-rapidjson==1.20",
    "python-telegram-bot==22.0",
    "pytz==2025.2",
    "questionary==2.1.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "ruff==0.11.7",
    "sb3-contrib>=2.2.1",
    "schedule==1.2.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sdnotify==0.3.2",
    "sqlalchemy==2.0.40",
    "stable-baselines3==2.4.1 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "stable-baselines3==2.5.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "ta-lib==0.4.38",
    "tabulate==0.9.0",
    "technical==1.5.0",
    "tensorboard==2.19.0",
    "time-machine==2.16.0",
    "torch==2.7.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "tqdm==4.67.1",
    "types-cachetools==5.5.0.20240820",
    "types-filelock==3.2.7",
    "types-python-dateutil==2.9.0.20241206",
    "types-requests==2.32.0.20250328",
    "types-tabulate==0.9.0.20241207",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "websockets==15.0.1",
    "xgboost==2.1.4",
]




